resources/v7m/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: v7m-web-service
  namespace: v7m
  labels:
    app: v7m-web
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  - name: https
    port: 443
    protocol: TCP
    targetPort: 5000
  selector:
    app: v7m-web
