resources/v7m/web/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: v7m-web-ingress
  namespace: v7m
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: www.v7m.hu
      http:
        paths:
          - path: /
            backend:
              serviceName: v7m-web
              servicePort: https
  tls:
    - hosts:
        - www.v7m.hu
      secretName: v7m-web-secret
